kubernetes/istio/ingressgateway-authz-policy.yaml
# Enables AuthZ for all incoming calls to ingress-gateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - {}
